GH-3488: Ignore non-`List<Map>` as an `x-death` header
Fixes: https://github.com/spring-projects/spring-amqp/issues/3488

The `x-death` header must be `List<Map<String, ?>>`,
otherwise the conversion fails with `ClassCastException`

(cherry picked from commit 8caac7fe0f105f17f6b1c11cf2aee8e6e226c8c0)